# c-ompact

./: .gitignore  CMakeLists.txt  HuffmanTree.cpp  README.md  main.cpp  utils.cpp  utils.h
include/: ArgumentParser.h  DecodeFile.h  EncodeDecodeUtils.h  EncodeFile.h  FileComparisonUtils.h  FileUtils.h  FrequencyUtils.h  Handler.h  HuffmanCodeGenerator.h  HuffmanSerializer.h  HuffmanTree.h  Node.h  utils.h
src/: ArgumentParser.cpp  DecodeFile.cpp  EncodeDecodeUtils.cpp  EncodeFile.cpp  FileComparisonUtils.cpp  FileUtils.cpp  FrequencyUtils.cpp  Handler.cpp  HuffmanCodeGenerator.cpp  HuffmanSerializer.cpp  HuffmanTree.cpp  Node.cpp  main.cpp  utils.cpp
tests/: test_huffman.cpp
